1. Метод .of [#348190]